# tabdetective

./: README.md  autogenerate_testcases.py  copilot?usggestion1.py  copilot_suggestion1.py  pyproject.toml
tabdetective/: chardetector.py  copilot_suggestion1.py  detector.py  markdowndetector.py  spacedetector.py
tabdetective/objects/: detectormodel.py  tables.py
testcases/: no_table.txt  simple01_comma_delimited.txt  simple01_pipe1_delimited.txt  simple01_pipe2_delimited.txt  simple01_semicolon_delimited.txt  simple01_space1_delimited.txt  simple01_space2_delimited.txt  simple01_space3_delimited.txt  simple01_space4_delimited.txt  simple01_tab_delimited.txt  simple02_comma_delimited.txt  simple02_pipe1_delimited.txt  simple02_pipe2_delimited.txt  simple02_semicolon_delimited.txt  simple02_space1_delimited.txt  simple02_space2_delimited.txt  simple02_space3_delimited.txt  simple02_space4_delimited.txt  simple02_tab_delimited.txt  simple03_comma_delimited.txt  simple03_pipe1_delimited.txt  simple03_pipe2_delimited.txt  simple03_semicolon_delimited.txt  simple03_space1_delimited.txt  simple03_space2_delimited.txt  simple03_space3_delimited.txt  simple03_space4_delimited.txt  simple03_tab_delimited.txt
testcases/templates/: comma_delimited.txt  pipe1_delimited.txt  pipe2_delimited.txt  semicolon_delimited.txt  space1_delimited.txt  space2_delimited.txt  space3_delimited.txt  space4_delimited.txt  tab_delimited.txt
tests/testcases/: autogenerate_testcases.py  simple01_comma_delimited.txt  simple01_pipe1_delimited.txt  simple01_pipe2_delimited.txt  (+24 more)
(+33 files in other folders)
